updated links at layout

--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -133,16 +133,16 @@
                     unknown printer took a galley of type and scrambled it to make a type specimen book.
                 </div>
                 <div class="footer_mediya_icon">
-                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://linkedin.com/in/radipu" target="_blank">
                         <div class="fh5co_verticle_middle"><i class="fa fa-linkedin"></i></div>
                     </a></div>
-                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
-                        <div class="fh5co_verticle_middle"><i class="fa fa-google-plus"></i></div>
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://github.com/radipu" target="_blank">
+                        <div class="fh5co_verticle_middle"><i class="fa fa-github"></i></div>
                     </a></div>
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
                         <div class="fh5co_verticle_middle"><i class="fa fa-twitter"></i></div>
                     </a></div>
-                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer">
+                    <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://facebook.com/radipu13" target="_blank">
                         <div class="fh5co_verticle_middle"><i class="fa fa-facebook"></i></div>
                     </a></div>
                 </div>
