--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -206,11 +206,10 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="pages/widgets.html" class="nav-link">
+            <a asp-area="admin" asp-controller="author" asp-action="index" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
               <p>
-                Widgets
-                <span class="right badge badge-danger">New</span>
+                Authors
               </p>
             </a>
           </li>
@@ -828,11 +827,10 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
-    All rights reserved.
-    <div class="float-right d-none d-sm-inline-block">
+    <strong>&copy; <script>document.write(new Date().getFullYear())</script>, All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>.</strong>
+    @*<div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 3.2.0
-    </div>
+    </div>*@
   </footer>
 </div>
 <!-- ./wrapper -->
