--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -6,21 +6,21 @@
     <title>@ViewData["Title"] - Think Something Different</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/My_Blog_Website.styles.css" asp-append-version="true" />
+    @*<link rel="stylesheet" href="~/My_Blog_Website.styles.css" asp-append-version="true" />*@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="css/media_query.css" rel="stylesheet" type="text/css"/>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/media_query.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css"/>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="css/animate.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/animate.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-    <link href="css/owl.carousel.css" rel="stylesheet" type="text/css"/>
-    <link href="css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/owl.carousel.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/owl.theme.default.css" rel="stylesheet" type="text/css"/>
     <!-- Bootstrap CSS -->
-    <link href="css/style_1.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/style_1.css" rel="stylesheet" type="text/css"/>
     <!-- Modernizr JS -->
-    <script src="js/modernizr-3.5.0.min.js"></script>
+    <script src="~/js/modernizr-3.5.0.min.js"></script>
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-3 fh5co_padding_menu">
-                        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="images/radipuLogo.png" alt="img" class="fh5co_logo_width"/></a>
+                        <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/radipuLogo.png" alt="img" class="fh5co_logo_width"/></a>
                         </div>
             <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
                 <div class="text-center d-inline-block">
@@ -124,7 +124,7 @@
     <div class="container-fluid fh5co_footer_bg pb-3">
     <div class="container animate-box">
         <div class="row">
-            <div class="col-12 spdp_right py-5"><img src="images/radipu LOGO_white.png" alt="img" class="footer_logo"/></div>
+            <div class="col-12 spdp_right py-5"><img src="~/images/radipu LOGO_white.png" alt="img" class="footer_logo"/></div>
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
@@ -168,19 +168,19 @@
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
                 <div class="footer_makes_sub_font"> Dec 31, 2016</div>
                 <a href="#" class="footer_post pb-4"> Success is not a good teacher failure makes you humble </a>
-                <div class="footer_position_absolute"><img src="images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div>
+                <div class="footer_position_absolute"><img src="~/images/footer_sub_tipik.png" alt="img" class="width_footer_sub_img"/></div>
             </div>
             <div class="col-12 col-md-12 col-lg-4 ">
                 <div class="footer_main_title py-3"> Last Modified Posts</div>
-                <a href="#" class="footer_img_post_6"><img src="images/allef-vinicius-108153.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/32-450x260.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download (1).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/science-578x362.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/vil-son-35490.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/zack-minor-15104.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download.jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/download (2).jpg" alt="img"/></a>
-                <a href="#" class="footer_img_post_6"><img src="images/ryan-moreno-98837.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/allef-vinicius-108153.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/32-450x260.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/download (1).jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/science-578x362.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/vil-son-35490.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/zack-minor-15104.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/download.jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/download (2).jpg" alt="img"/></a>
+                <a href="#" class="footer_img_post_6"><img src="~/images/ryan-moreno-98837.jpg" alt="img"/></a>
             </div>
         </div>
         <div class="row justify-content-center pt-2 pb-4">
@@ -198,7 +198,7 @@
 <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
         <div class="row  ">
-            <div class="py-4 Reserved" style="text-align:center"> © <script>document.write(new Date().getFullYear())</script>, All rights reserved. Developed by <a href="https://cv.radipu.me">radipu</a>. </div>
+            <div class="py-4 Reserved" style="text-align:center"> &copy; <script>document.write(new Date().getFullYear())</script>, All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>. </div>
         </div>
     </div>
 </div>
@@ -212,7 +212,7 @@
     @await RenderSectionAsync("Scripts", required: false)
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="~/js/owl.carousel.min.js"></script>
     <!--<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
@@ -221,8 +221,8 @@
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
     <!-- Waypoints -->
-    <script src="js/jquery.waypoints.min.js"></script>
+    <script src="~/js/jquery.waypoints.min.js"></script>
     <!-- Main -->
-    <script src="js/main.js"></script>
+    <script src="~/js/main.js"></script>
 </body>
 </html>
