resolved the warnings in login

--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-12 col-md-3 fh5co_padding_menu">
                         <a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/images/radipuLogo.png" alt="img" class="fh5co_logo_width"/></a>
-                        </div>
+                    </div>
             <div class="col-12 col-md-9 align-self-center fh5co_mediya_right">
                 <div class="text-center d-inline-block">
                     <a class="fh5co_display_table"><div class="fh5co_verticle_middle"><i class="fa fa-search"></i></div></a>
@@ -198,7 +198,7 @@
 <div class="container-fluid fh5co_footer_right_reserved">
     <div class="container">
         <div class="row  ">
-            <div class="py-4 Reserved" style="text-align:center"> &copy; <script>document.write(new Date().getFullYear())</script>, All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>. </div>
+            <div class="py-4 Reserved" style="text-align:center"> &copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>. </div>
         </div>
     </div>
 </div>
