--- a/My Blog Website/wwwroot/css/site.css
+++ b/My Blog Website/wwwroot/css/site.css
@@ -35,19 +35,85 @@ footer a {
 }
 
 .gradient-custom-2 {
-background: #fccb90;
-background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
-background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+    border: none;
+    outline: none;
+    background: #45f3ff;
+    padding: 11px 25px !important;
+    margin-top: 10px;
+    border-radius: 8px !important;
 }
 
 @media (min-width: 768px) {
-.gradient-form {
-height: 100vh !important;
-}
+    .gradient-form {
+        height: 100vh !important;
+    }
 }
 @media (min-width: 769px) {
-.gradient-custom-2 {
-border-top-right-radius: .3rem;
-border-bottom-right-radius: .3rem;
+    .gradient-custom-2 {
+        border-top-right-radius: .3rem;
+        border-bottom-right-radius: .3rem;
+    }
 }
+
+.card-body {
+    position: relative;
+    width: 380px;
+    height: 475px;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-top: 100px;
+}
+
+.card-body::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 500px;
+    background: linear-gradient(0deg, transparent, crimson, crimson);
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+}
+.card-body::after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 380px;
+    height: 420px;
+    background: linear-gradient(0deg, transparent, crimson, crimson);
+    transform-origin: bottom right;
+    animation: animate 6s linear infinite;
+    animation-delay: -3s;
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+#account {
+    position: absolute;
+    inset: 2px;
+    border-radius: 8px;
+    background: white;
+    z-index: 10;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+#account p {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.checkbox {
+    display: flex;
+    justify-content: space-between;
 }
