--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
   <title>radipu | Dashboard</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet"> 
   <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="~/admin/plugins/fontawesome-free/css/all.min.css">
   <!-- overlayScrollbars -->
@@ -19,7 +19,7 @@
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="60" width="60">
+    <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="200">
   </div>
 
   <!-- Navbar -->
