--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="200">
+    <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="300">
   </div>
 
   <!-- Navbar -->
@@ -808,5 +808,6 @@
 @*<script src="~/admin/dist/js/demo.js"></script>*@
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="~/admin/dist/js/pages/dashboard2.js"></script>
+@RenderSection("Scripts", required: false)
 </body>
 </html>
