--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -776,8 +776,8 @@
   <!-- /.control-sidebar -->
 
   <!-- Main Footer -->
-  <footer class="main-footer">
-    <strong>&copy; <script>document.write(new Date().getFullYear())</script>, All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>.</strong>
+  <footer class="main-footer text-center">
+    <strong>&copy; <script>document.write(new Date().getFullYear())</script>. All rights reserved. Developed by <a href="https://cv.radipu.me" target="_blank">radipu</a>.</strong>
     @*<div class="float-right d-none d-sm-inline-block">
       <b>Version</b> 3.2.0
     </div>*@
