--- a/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
@@ -16,32 +16,32 @@
             <div class="card-body p-0">
                 <form asp-action="Create" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="FirstName" class="control-label">Author First Name</label>
                         <input asp-for="FirstName" class="form-control" />
                         <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="LastName" class="control-label">Author Last Name</label>
                         <input asp-for="LastName" class="form-control" />
                         <span asp-validation-for="LastName" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="Username" class="control-label">Author Username</label>
                         <input asp-for="Username" class="form-control" />
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="Password" class="control-label">Password</label>
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="Email" class="control-label">Author Email</label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6 authform">
+                    <div class="form-group col-md-8 authform">
                         <label asp-for="AboutAuth" class="control-label">About Author</label>
                         <input asp-for="AboutAuth" class="form-control" />
                     </div>
@@ -51,8 +51,10 @@
                 </form>
             </div>
             <div class="authform">
-                <a asp-action="Index">Back to List</a>
-            </div>
+                <button class="btn btn-warning btn-sm">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    <a asp-action="Index">Back to List</a>
+                </button>
         </div>
     </div>
 </div>
