--- a/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Create.cshtml
@@ -46,15 +46,17 @@
                         <input asp-for="AboutAuth" class="form-control" />
                     </div>
                     <div class="form-group text-center">
-                        <input type="submit" value="Create" class="btn btn-primary" />
+                        <button class="btn btn-warning">
+                            <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                            <a asp-action="Index">Back to List</a>
+                        </button>
+                        <button class="btn btn-primary" type="submit" value="Create">
+                            <i class="fa fa-save" aria-hidden="true"></i>
+                            Create
+                        </button>
                     </div>
                 </form>
             </div>
-            <div class="authform">
-                <button class="btn btn-warning btn-sm">
-                    <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                    <a asp-action="Index">Back to List</a>
-                </button>
         </div>
     </div>
 </div>
