--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -152,6 +152,7 @@
                 <ul class="footer_menu">
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; C# & ASP.NET</a></li>
                     <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; Book Review</a></li>
+                    <li><a href="#" class=""><i class="fa fa-angle-right"></i>&nbsp;&nbsp; FAQ</a></li>
                 </ul>
             </div>
             <div class="col-12 col-md-5 col-lg-3 position_footer_relative">
