--- a/My Blog Website/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Views/Shared/_Layout.cshtml
@@ -128,9 +128,9 @@
             <div class="clearfix"></div>
             <div class="col-12 col-md-4 col-lg-3">
                 <div class="footer_main_title py-3"> About</div>
-                <div class="footer_sub_about pb-3"> Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                <div class="footer_sub_about pb-3"> I am a software engineer by profession. I love to read, write, solving problems
+                    and share my knowledge. This journey has begun when I was a teen. No matter what, I always remain passionate
+                    and thirsty to learn new.
                 </div>
                 <div class="footer_mediya_icon">
                     <div class="text-center d-inline-block"><a class="fh5co_display_table_footer" href="https://linkedin.com/in/radipu" target="_blank">
