updated admin layout

--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -235,7 +235,7 @@
             <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a href="pages/layout/top-nav.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
+                  <i class="fa fa-plus nav-icon"></i>
                   <p>Create Post</p>
                 </a>
               </li>
