email implementation has been done. need to update again.

--- a/My Blog Website/Views/Contact/Index.cshtml
+++ b/My Blog Website/Views/Contact/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h2>@ViewBag.Message</h2>
 
 <div class="container-fluid mb-4">
     <div class="container">
