--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-  <div class="preloader flex-column justify-content-center align-items-center">
+  @*<div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="300">
-  </div>
+  </div>*@
 
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-dark">
