--- a/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-  @*<div class="preloader flex-column justify-content-center align-items-center">
+  <div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__wobble" src="/images/radipu LOGO_white.png" alt="radipuLogo" height="100"width="300">
-  </div>*@
+  </div>
 
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-dark">
@@ -721,6 +721,12 @@
 <script src="~/admin/plugins/raphael/raphael.min.js"></script>
 <script src="~/admin/plugins/jquery-mapael/jquery.mapael.min.js"></script>
 <script src="~/admin/plugins/jquery-mapael/maps/usa_states.min.js"></script>
+<!-- ChartJS -->
+<script src="~/admin/plugins/chart.js/Chart.min.js"></script>
+
+<!-- AdminLTE for demo purposes -->
+@*<script src="~/admin/dist/js/demo.js"></script>*@
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="~/admin/dist/js/pages/dashboard2.js"></script>
 @RenderSection("Scripts", required: false)
 </body>
