updated the author table, edit page, buttons problem fixes

--- a/My Blog Website/Areas/Admin/Views/Author/Edit.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Edit.cshtml
@@ -47,7 +47,7 @@
                         <input asp-for="AboutAuth" class="form-control" />
                         <span asp-validation-for="AboutAuth" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-8 authform">
+                    <div class="form-group text-center">
                         <button class="btn btn-warning">
                             <i class="fa fa-arrow-left" aria-hidden="true"></i>
                             <a asp-action="Index">Back to List</a>
