--- a/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>The Authors</h1>
+<h1 style="text-align:center">The Authors</h1>
 
 <button class="icon-btn add-btn">
     <div class="add-icon"></div>
@@ -17,8 +17,7 @@
 <table class="table table table-bordered table-hover">
     <thead>
         <tr class="text-center">
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Author Name</th>
             <th>Username</th>
             <th>Email</th>
             <th>About Author</th>
@@ -26,13 +25,11 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
+            var conc = item.FirstName + " " + item.LastName;
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Username)
