updated the css file, author page button

--- a/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Index.cshtml
@@ -21,7 +21,7 @@
             <th>Username</th>
             <th>Email</th>
             <th>About Author</th>
-            <th>Action</th>
+            <th style="max-width: 5%">Action</th>
         </tr>
     </thead>
     <tbody>
