--- a/My Blog Website/Areas/Admin/Views/Author/Edit.cshtml
+++ b/My Blog Website/Areas/Admin/Views/Author/Edit.cshtml
@@ -18,32 +18,39 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="AuthorId" />
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="FirstName" class="control-label"></label>
+                        <label asp-for="FirstName" class="control-label">Author First Name</label>
                         <input asp-for="FirstName" class="form-control" />
                         <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="LastName" class="control-label"></label>
+                        <label asp-for="LastName" class="control-label">Author Last Name</label>
                         <input asp-for="LastName" class="form-control" />
                         <span asp-validation-for="LastName" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="Username" class="control-label"></label>
+                        <label asp-for="Username" class="control-label">Username</label>
                         <input asp-for="Username" class="form-control" />
                         <span asp-validation-for="Username" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="Password" class="control-label"></label>
-                        <input asp-for="Password" class="form-control" />
+                        <label asp-for="Password" class="control-label">Password</label>
+                        <div class="d-flex">
+                            <div class="input-container">
+                                <input asp-for="Password" class="form-control passwordclass" id="passwordid" />
+                                @*<i class="far fa-copy fa-2x"></i>*@
+                            </div>
+                            <button class="generatebtn">Generate</button>
+                        </div>
                         <span asp-validation-for="Password" class="text-danger"></span>
+                        @*<div class="alert-container active">Password Copied</div>*@
                     </div>
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="Email" class="control-label"></label>
+                        <label asp-for="Email" class="control-label">Author Email</label>
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-8 authform">
-                        <label asp-for="AboutAuth" class="control-label"></label>
+                        <label asp-for="AboutAuth" class="control-label">About Author</label>
                         <input asp-for="AboutAuth" class="form-control" />
                         <span asp-validation-for="AboutAuth" class="text-danger"></span>
                     </div>
@@ -52,9 +59,9 @@
                             <i class="fa fa-arrow-left" aria-hidden="true"></i>
                             <a asp-action="Index">Back to List</a>
                         </button>
-                        <button class="btn btn-primary" type="submit" value="Save">
+                        <button class="btn btn-primary" type="submit" value="Update">
                             <i class="fa fa-save" aria-hidden="true"></i>
-                            Save
+                            Update
                         </button>
                     </div>
                 </form>
